--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,10 +1,4 @@
-ENV_DOUCMENT_ROOT=/work
-ENV_DB_CONNECTION=mysql_hrsc
-ENV_DB_HOST=laravel_mariadb
-ENV_DB_PORT=3306
-ENV_DB_DATABASE=surveycloud
-ENV_DB_USERNAME=laravel
-ENV_DB_PASSWORD=password
-ENV_DB_ROOT_PASSWORD=password
-ENV_APP_PORT=8080
-ENV_SRC_DIRECTORY=surveycloud
+ENV_ANSIBLE_PORT=8888
+ENV_ANSIBLE_CLIENT_PORT=9999
+ENV_ANSIBLE_VERSION=2.9.5
+ENV_ANSIBLE_LINT_VERSION=4.2.0
