--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,22 +11,22 @@ services:
         ENV_ANSIBLE_VERSION: ${ENV_ANSIBLE_VERSION}
         ENV_ANSIBLE_LINT_VERSION: ${ENV_ANSIBLE_LINT_VERSION}
     image: ansible_host
-    restart: always
     env_file: 
       - ./.env
     ports:
-      - ${ENV_ANSIBLE_PORT}:80
-    # links:
-    #   - client
+      - "${ENV_ANSIBLE_PORT}:80"
+      - "20022:22"
     # volumes:
     #   - ../project/${ENV_SRC_DIRECTORY}:${ENV_DOUCMENT_ROOT}/${ENV_SRC_DIRECTORY}
     stdin_open: true
     tty: true
-    # privileged: true
+    privileged: true
+    # command: /bin/sh -c "/etc/init.d/sshd start && tail -f /dev/null"
     environment: 
       TZ: Asia/Tokyo
     networks:
-      - ansible_net
+      ansible_net:
+        ipv4_address: 172.30.0.10
 
   client:
     container_name: ansible_client
@@ -35,15 +35,22 @@ services:
     # restart: always
     stdin_open: true
     tty: true
+    privileged: true
     environment:
       TZ: Asia/Tokyo
     ports:
-      - ${ENV_ANSIBLE_CLIENT_PORT}:8000
+      - "${ENV_ANSIBLE_CLIENT_PORT}:8000"
+      - "50022:22"
     depends_on:
       - ansible
     networks:
-      - ansible_net
+      ansible_net:
+        ipv4_address: 172.30.0.11
 
 networks:
   ansible_net:
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.30.0.0/24
